# Modena-Task

./: CMakeLists.txt  README.md
demo/: demo.cpp
include/: Specs.h
src/: Specs.cpp
